--- a/cds.cabal
+++ b/cds.cabal
@@ -25,13 +25,16 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Args
+      Image
   other-modules:
       Paths_cds
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      JuicyPixels >=3.3.5
+    , base >=4.7 && <5
+    , optparse-applicative >=0.16
   default-language: Haskell2010
 
 executable cds-exe
@@ -42,7 +45,8 @@ executable cds-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      JuicyPixels >=3.3.5
+    , base >=4.7 && <5
     , cds
   default-language: Haskell2010
 
@@ -55,6 +59,7 @@ test-suite cds-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      JuicyPixels >=3.3.5
+    , base >=4.7 && <5
     , cds
   default-language: Haskell2010
