--- a/cds.cabal
+++ b/cds.cabal
@@ -34,7 +34,9 @@ library
   build-depends:
       JuicyPixels >=3.3.5
     , base >=4.7 && <5
+    , comonad >=5.0.8
     , optparse-applicative >=0.16
+    , vector >=0.12.3.0
   default-language: Haskell2010
 
 executable cds-exe
