--- a/cds.cabal
+++ b/cds.cabal
@@ -35,6 +35,7 @@ library
       JuicyPixels >=3.3.5
     , base >=4.7 && <5
     , comonad >=5.0.8
+    , massiv >=0.6.1.0
     , optparse-applicative >=0.16
     , vector >=0.12.3.0
   default-language: Haskell2010
