--- a/cds.cabal
+++ b/cds.cabal
@@ -29,6 +29,8 @@ library
       ArrayImage
       BoxedImage
       Image
+      ImageIO
+      ImageProcessing
   other-modules:
       Paths_cds
   hs-source-dirs:
@@ -41,10 +43,9 @@ library
     , vector >=0.12.3.0
   default-language: Haskell2010
 
-executable cds-array
-  main-is: MainArray.hs
+executable cds
+  main-is: Main.hs
   other-modules:
-      MainBoxed
       Paths_cds
   hs-source-dirs:
       app
