moved cds in its own module

--- a/cds.cabal
+++ b/cds.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Args
       BoxedImage
+      ColorDepthMask
       ColorDepthSearch
       Image
       ImageIO
