--- a/package.yaml
+++ b/package.yaml
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/cds#readme>
+description: Please see the README on GitHub at <https://github.com/githubuser/cds#readme>
 
 dependencies:
   - base >= 4.7 && < 5
@@ -29,6 +29,9 @@ library:
     - optparse-applicative >= 0.16
     - JuicyPixels >= 3.3.5
     - vector >= 0.12.3.0
+    - accelerate >= 1.3.0.0
+    - accelerate-llvm >= 1.3.0.0
+    - accelerate-llvm-native >= 1.3.0.0
 
 executables:
   cds:
