--- a/cds.cabal
+++ b/cds.cabal
@@ -31,6 +31,7 @@ library
       ColorDepthSearch.Accelerate
       ColorDepthSearch.Internal
       ColorDepthSearch.Naive
+      Fold
       Image
       ImageIO
       ImageProcessing
