--- a/cds.cabal
+++ b/cds.cabal
@@ -55,7 +55,7 @@ executable cds
       Paths_cds
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
       JuicyPixels >=3.3.5
     , base >=4.7 && <5
