--- a/cds.cabal
+++ b/cds.cabal
@@ -31,8 +31,9 @@ library
       ColorDepthSearch.Accelerate
       ColorDepthSearch.Internal
       ColorDepthSearch.Naive
-      Fold
+      Dim
       Image
+      Image1
       ImageIO
       ImageProcessing
   other-modules:
@@ -44,8 +45,13 @@ library
     , accelerate >=1.3.0.0
     , accelerate-llvm >=1.3.0.0
     , accelerate-llvm-native >=1.3.0.0
-    , base >=4.7 && <5
+    , base >=4.10 && <5
+    , constraints-deriving >=1.1.1.2
     , optparse-applicative >=0.16
+    , singletons >=3.0
+    , singletons-base >=3.0
+    , singletons-th >=3.0
+    , typenums >=0.1.4
     , vector >=0.12.3.0
   default-language: Haskell2010
 
@@ -55,10 +61,10 @@ executable cds
       Paths_cds
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.7 && <5
+    , base >=4.10 && <5
     , cds
   default-language: Haskell2010
 
@@ -72,6 +78,6 @@ test-suite cds-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.7 && <5
+    , base >=4.10 && <5
     , cds
   default-language: Haskell2010
