--- a/package.yaml
+++ b/package.yaml
@@ -20,18 +20,23 @@ extra-source-files:
 description: Please see the README on GitHub at <https://github.com/githubuser/cds#readme>
 
 dependencies:
-  - base >= 4.7 && < 5
+  - base >= 4.10 && < 5
   - JuicyPixels >= 3.3.5
 
 library:
   source-dirs: src
   dependencies:
-    - optparse-applicative >= 0.16
-    - JuicyPixels >= 3.3.5
-    - vector >= 0.12.3.0
     - accelerate >= 1.3.0.0
     - accelerate-llvm >= 1.3.0.0
     - accelerate-llvm-native >= 1.3.0.0
+    - constraints-deriving >=1.1.1.2
+    - JuicyPixels >= 3.3.5
+    - optparse-applicative >= 0.16
+    - singletons >= 3.0
+    - singletons-th >= 3.0
+    - singletons-base >= 3.0
+    - typenums >= 0.1.4
+    - vector >= 0.12.3.0
 
 executables:
   cds:
@@ -41,7 +46,7 @@ executables:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
-      - -O2
+      - -O
     dependencies:
       - cds
 
