--- a/stack.yaml
+++ b/stack.yaml
@@ -17,22 +17,33 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.10
+resolver:  nightly-2021-09-18
 
 packages:
 - .
 
 extra-deps:
-- accelerate-1.3.0.0
-- accelerate-llvm-1.3.0.0
-- accelerate-llvm-native-1.3.0.0
-- accelerate-llvm-ptx-1.3.0.0
-- llvm-hs-9.0.1
-- llvm-hs-pure-9.0.0
+- github: AccelerateHS/accelerate
+  commit: 1ab75f1eb01a1b427563808057d46f29d99bb4dc
+- github: AccelerateHS/accelerate-llvm
+  commit: 0dec9b4deeb86a28fe89fb330f93aa025ef38745
+  subdirs:
+    - accelerate-llvm
+    - accelerate-llvm-native
+- constraints-deriving-1.1.1.2
+- github: llvm-hs/llvm-hs
+  commit: 80e881257e356edea333b8da65eb46782a8d3b14
+  subdirs:
+    - llvm-hs
+    - llvm-hs-pure
 
 flags:
   llvm-hs:
     shared-llvm: true
+    llvm-with-rtti: false
 
 ghc-options:
-  llvm-hs: -optcxx=-std=c++11
+  llvm-hs: -optcxx=-std=c++14 -optcxx=-lstdc++
+  accelerate-llvm: -optcxx=-std=c++14 -optcxx=-lstdc++
+
+allow-newer: true
