--- a/cds.cabal
+++ b/cds.cabal
@@ -45,9 +45,10 @@ library
     , accelerate >=1.3.0.0
     , accelerate-llvm >=1.3.0.0
     , accelerate-llvm-native >=1.3.0.0
-    , base >=4.10 && <5
+    , base >=4.15 && <5
     , constraints-deriving >=1.1.1.2
     , optparse-applicative >=0.16
+    , repa >=3.4.1.4
     , singletons >=3.0
     , singletons-base >=3.0
     , singletons-th >=3.0
@@ -64,7 +65,7 @@ executable cds
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -O
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.10 && <5
+    , base >=4.15 && <5
     , cds
   default-language: Haskell2010
 
@@ -78,6 +79,6 @@ test-suite cds-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.10 && <5
+    , base >=4.15 && <5
     , cds
   default-language: Haskell2010
