--- a/package.yaml
+++ b/package.yaml
@@ -20,7 +20,7 @@ extra-source-files:
 description: Please see the README on GitHub at <https://github.com/githubuser/cds#readme>
 
 dependencies:
-  - base >= 4.10 && < 5
+  - base >= 4.15 && < 5
   - JuicyPixels >= 3.3.5
 
 library:
@@ -32,6 +32,7 @@ library:
     - constraints-deriving >=1.1.1.2
     - JuicyPixels >= 3.3.5
     - optparse-applicative >= 0.16
+    - repa >= 3.4.1.4
     - singletons >= 3.0
     - singletons-th >= 3.0
     - singletons-base >= 3.0
