--- a/cds.cabal
+++ b/cds.cabal
@@ -47,6 +47,7 @@ library
     , accelerate-llvm-native >=1.3.0.0
     , base >=4.15 && <5
     , constraints-deriving >=1.1.1.2
+    , finite-typelits >=0.1.4.2
     , optparse-applicative >=0.16
     , repa >=3.4.1.4
     , singletons >=3.0
