--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ library:
     - accelerate-llvm >= 1.3.0.0
     - accelerate-llvm-native >= 1.3.0.0
     - constraints-deriving >=1.1.1.2
+    - finite-typelits >= 0.1.4.2
     - JuicyPixels >= 3.3.5
     - optparse-applicative >= 0.16
     - repa >= 3.4.1.4
