--- a/cds.cabal
+++ b/cds.cabal
@@ -26,17 +26,10 @@ source-repository head
 library
   exposed-modules:
       Args
-      BoxedImage
-      ColorDepthSearch
-      ColorDepthSearch.Accelerate
-      ColorDepthSearch.Internal
-      ColorDepthSearch.Naive
+      Dims
       Image
-      Image1
       ImageIO
-      ImageIO1
       ImageProcessing
-      ImageProcessing1
       Pixel
   other-modules:
       Paths_cds
