--- a/cds.cabal
+++ b/cds.cabal
@@ -26,7 +26,6 @@ source-repository head
 library
   exposed-modules:
       Args
-      Dims
       Image
       ImageIO
       ImageProcessing
@@ -43,11 +42,13 @@ library
     , base >=4.15 && <5
     , constraints-deriving >=1.1.1.2
     , finite-typelits >=0.1.4.2
+    , newtype >=0.2.2.0
     , optparse-applicative >=0.16
-    , repa >=3.4.1.4
+    , reflection >=2.1.8
     , singletons >=3.0
     , singletons-base >=3.0
     , singletons-th >=3.0
+    , template-haskell >=2.17.0.0
     , typenums >=0.1.4
     , vector >=0.12.3.0
   default-language: Haskell2010
@@ -58,7 +59,7 @@ executable cds
       Paths_cds
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels >=3.3.5
     , base >=4.15 && <5
