--- a/cds.cabal
+++ b/cds.cabal
@@ -30,6 +30,7 @@ library
       ImageIO
       ImageProcessing
       Pixel
+      Stencil
   other-modules:
       Paths_cds
   hs-source-dirs:
@@ -39,7 +40,7 @@ library
     , accelerate >=1.3.0.0
     , accelerate-llvm >=1.3.0.0
     , accelerate-llvm-native >=1.3.0.0
-    , base >=4.15 && <5
+    , base >=4.10 && <5
     , constraints-deriving >=1.1.1.2
     , finite-typelits >=0.1.4.2
     , newtype >=0.2.2.0
@@ -48,7 +49,7 @@ library
     , singletons >=3.0
     , singletons-base >=3.0
     , singletons-th >=3.0
-    , template-haskell >=2.17.0.0
+    , template-haskell >=2.15.0.0
     , typenums >=0.1.4
     , vector >=0.12.3.0
   default-language: Haskell2010
@@ -62,7 +63,7 @@ executable cds
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.15 && <5
+    , base >=4.10 && <5
     , cds
   default-language: Haskell2010
 
@@ -76,6 +77,6 @@ test-suite cds-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels >=3.3.5
-    , base >=4.15 && <5
+    , base >=4.10 && <5
     , cds
   default-language: Haskell2010
